[gd_scene load_steps=32 format=3 uid="uid://bdmrnp3vkb5q2"]

[ext_resource type="Script" path="res://entities/enemies/Pelican/pelican.gd" id="1_3c7qj"]
[ext_resource type="PackedScene" uid="uid://bustr66pd7ub5" path="res://entities/enemies/Pelican/Fish Bullet/fish.tscn" id="2_c4srk"]
[ext_resource type="PackedScene" uid="uid://dw1dwmoh8wykv" path="res://entities/other/feather/feather.tscn" id="2_o5wwu"]
[ext_resource type="Texture2D" uid="uid://cdil41v8jbeb5" path="res://assets/pelican_sheet.png" id="4_f2yjp"]
[ext_resource type="Shader" path="res://entities/enemies/enemyflash.gdshader" id="4_fvdxm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ffb6l"]
radius = 24.1868

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5c4kt"]
resource_local_to_scene = true
shader = ExtResource("4_fvdxm")
shader_parameter/flash_color = Color(1, 1, 1, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_c237u"]
atlas = ExtResource("4_f2yjp")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a1d1"]
atlas = ExtResource("4_f2yjp")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ptfpu"]
atlas = ExtResource("4_f2yjp")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iwxqe"]
atlas = ExtResource("4_f2yjp")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qioim"]
atlas = ExtResource("4_f2yjp")
region = Rect2(256, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4786"]
atlas = ExtResource("4_f2yjp")
region = Rect2(320, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1v1ie"]
atlas = ExtResource("4_f2yjp")
region = Rect2(384, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0mji0"]
atlas = ExtResource("4_f2yjp")
region = Rect2(448, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_s6vr3"]
atlas = ExtResource("4_f2yjp")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hk05v"]
atlas = ExtResource("4_f2yjp")
region = Rect2(64, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_74xfe"]
atlas = ExtResource("4_f2yjp")
region = Rect2(128, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dj71g"]
atlas = ExtResource("4_f2yjp")
region = Rect2(192, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdueb"]
atlas = ExtResource("4_f2yjp")
region = Rect2(256, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fi8i8"]
atlas = ExtResource("4_f2yjp")
region = Rect2(320, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqbk1"]
atlas = ExtResource("4_f2yjp")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wvl6"]
atlas = ExtResource("4_f2yjp")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d0pck"]
atlas = ExtResource("4_f2yjp")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_npy0n"]
atlas = ExtResource("4_f2yjp")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dw72"]
atlas = ExtResource("4_f2yjp")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpvkg"]
atlas = ExtResource("4_f2yjp")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_3bwn7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_c237u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a1d1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ptfpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iwxqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qioim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4786")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1v1ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0mji0")
}],
"loop": false,
"name": &"die",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s6vr3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hk05v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_74xfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dj71g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdueb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fi8i8")
}],
"loop": false,
"name": &"shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqbk1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wvl6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d0pck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npy0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dw72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpvkg")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_oe03p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ytjfi"]
resource_name = "white_flash"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s12x8"]
_data = {
"RESET": SubResource("Animation_oe03p"),
"white_flash": SubResource("Animation_ytjfi")
}

[node name="Pelican" type="CharacterBody2D" groups=["enemies"]]
collision_layer = 12
collision_mask = 3
motion_mode = 1
script = ExtResource("1_3c7qj")
bullet_scene = ExtResource("2_c4srk")
feather_scene = ExtResource("2_o5wwu")
speed = 2000

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ffb6l")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_5c4kt")
sprite_frames = SubResource("SpriteFrames_3bwn7")
animation = &"shoot"

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BulletOrigin" type="Marker2D" parent="."]
position = Vector2(21, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_s12x8")
}

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
